University_system/force-app/main/default/objects/Hostel_Room__c/Hostel_Room__c.object-meta.xml
<CustomObject>
    <label>Hostel Room</label>
    <nameField>
        <label>Hostel Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hostel Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>