University_system/force-app/main/default/objects/Hostel_Room__c/fields/Allow_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allow_Amount__c</fullName>
    <label>Allow Amount</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>