University_system/force-app/main/default/objects/Hostel_Room__c/fields/Hull__c.field-meta.xml
<CustomField>
    <fullName>Hull__c</fullName>
    <label>Hull</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>