University_system/force-app/main/default/objects/Hostel_Room__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Hostel Rooms</relationshipLabel>
    <relationshipName>Hostel_Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>